--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,8 @@
-FROM ubuntu:latest
-LABEL authors="Zaxap"
+FROM gradle:7.2.0 AS builder
+COPY . /app
+WORKDIR /app
+RUN gradle fatJar
 
-ENTRYPOINT ["top", "-b"]
+FROM openjdk:17-jdk-slim
+COPY --from=builder /app/build/libs/backend-1.0-standalone.jar .
+CMD ["java", "-DFCGI_PORT=1487", "-jar", "backend-1.0-standalone.jar"]
