--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,10 @@
-FROM ubuntu:latest
-LABEL authors="Zaxap"
+FROM nginx:alpine
 
-ENTRYPOINT ["top", "-b"]
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
+RUN rm -rf /usr/share/nginx/html
+
+COPY ../frontend/ /usr/share/nginx/html
+
+
+CMD ["nginx", "-g", "daemon off;"]
